app/View/Themed/Macnemo/webroot/css/src/theme.scss
/* ... */
.btn_back_l {
  background-image: image-url("mix_back.png");
  background-repeat: repeat-y; }

.btn_top_l {
  background-image: image-url("mix_top.png");
  background-repeat: repeat-y; }

/*back and top wide button end */

/** buttons end ** */

/*******************************************************************************
 * Buttons Thread Tools
 ******************************************************************************/

.btn-threadTool {
	display: inline-block;
	margin-top: 1px;
	width: 13px;
	height: 13px;
}

.btn-threadCollapse { @extend .sprite-thread-collapse; 	}
.btn-threadOpen 		{ @extend .sprite-thread-open; 			}

/** headers start ** */
.c_header_1 {
	@include c_t_h_3_abs(24px);
	padding: 0px 5px;

	@extend .header_style_2;
	border-width: 1px 0;

	}

.c_header_2 {
	@extend .header_style_2;
	@extend .c_t_h_3_tbl;
	@extend .c_top-radius;
	border-width: 0 0 $border_width 0;
	// explizit zero left right margin for FF and Opera
	padding: $padding/2 0;
	}

.c_header_1, .c_header_2 {
	border-bottom: 1px solid silver;

	@extend .box_shadow_down_1;

	// make shure box shadow is always above background; esp. Vorschau header
	position:relative;
	z-index: 10;

	h1, h2, h3 {
		font-size: 13px;	
		font-weight: bold;
		margin: 0;
		}
	}

/** headers end ** */

/** entry/add ** */
.entry.add, .entry.edit {
  background-color: $saito_gray_light;
  border-style: solid;
  border-color: $saito_gray_dark;
  border-width: 0 $border_width $border_width $border_width;
	@extend .c_bottom-radius;
  .preview {
    display: none; }
  .preview .content {
    background-color: white;
    padding: 20px; }
  .content {
    overflow: hidden; }
  form {
    display: block;
    padding: $padding;
    label {
      display: inline; } }
  form > div {
    padding: 0em; }
  form > div > div {
    padding: 0.5em; }
  submit {
    margin: 0; } }

.entry.reply {
  @extend .entry.add;
/*  @include border-radius(0);*/
  border: none;
	@extend .c_bottom-radius;
	}

.postingform_main {
  @include column(18); }

.postingform_right {
  @include column(4, true);

	.checkbox {
		white-space: nowrap;
		}
	}

.entry_edited_info, .c_info_text {
	@extend .info_text;
	@extend .small; 
	}

/*******************************************************************************
 * Entry thread_line
 ******************************************************************************/

.thread_line-pre {
	position: absolute;
	vertical-align: text-top;
	height: 19px;
	line-height: 19px;
	font-size: 13px;
	}

.thread_line-content {
	padding-left: 18px;
	display: block;
	&:hover{
		background: #F0F0F0;
		}
	}

.thread_line-username {
	font-weight: normal;
	}

.thread_line-post {
		@extend .c_info_text;
		font-weight: normal;
		display: inline;
		margin-left: 0.5em;
}

/* thread_slider */
.t_s {
  /* 20 px left because of huge, vertical close button */
  margin: 5px 5px 5px 20px;
  border: $border_width $saito_gray_dark solid;
	@extend .c_all-radius;
  /* user_list und inline view sollen sauber getrennt bleiben */
  overflow: hidden; }

/******************************************************************************/




#entry_index {
  margin-top: -10px;
  .tree_thread {} }

/** entry/view ** */
#entry_view, #entry_mix {
  .a,.b {
    @extend .box_style_1; } }

/*#entry_view, #entry_mix, #entry_index {*/
  .a_a_a {
    padding: 10px 10px 15px 10px; }

	.c_a_a_b {
		@extend .c_t_h_3_tbl;
		height: 45px;

	& > div > div {
		border-style: solid;
		border-color: $saito_gray_dark;
		padding: 0 20px;
		}

	.c_a_a_b_a {
		border-width: $border_width $border_width 0 0;
		@include border-top-right-radius($corner_radius); 
		}

	.c_a_a_b_c {
		border-width: $border_width 0 0 $border_width;
		@include border-top-left-radius($corner_radius); }
		}
	
	.a { margin-bottom: 10px;
	}

  .b {
    padding: 10px;
    .tree_thread {
			@include box-shadow(0 0 0);	
      border: none;
      background: none;
      padding: 0;
      margin: 0; } } 
/*	}*/

/*entry/view end */

/* */
.tree_thread {
  @extend .box_style_1;
  padding: 8px;
  margin-bottom: 4px;
  .img_pencil {
    visibility: hidden; }
  ul:first-child {
    margin-left: 30px; } }

ul.thread {
  margin: 0 !important; }

.thread_box {
  /* user_list und inline view sollen sauber getrennt bleiben */
  /*	overflow: hidden; */ }

.thread_tools {
  opacity: 0.2;
  border-style: solid;
  border-color: $saito_gray_dark;
  border-width: $border_width $border_width 0 $border_width;
  display: inline-block;
  margin-left: 35px;
  @include border-top-left-radius(3px);
  @include border-top-right-radius(3px);
  ul,li {
    margin: 0;
    padding: 0;
    list-style-type: none;
    display: inline; }
  li {
    float: left; }
  a {
    padding: 1px 10px;
    display: inline-block;
    text-align: center;
    width: 13px;
    height: 13px;
    &:active {
      background-color: $saito_gray_dark; } }
  li {
    border-right: $border_width solid $saito_gray_dark; }
  li:first-child {
    /* we need this for the active state */
    @include border-top-left-radius(3px); }
  li:last-child {
    border: none;
    /* we need this for the active state */
    @include border-top-right-radius(3px); } }

.thread_inline {
  display: none;
  position: relative;
  margin: 4px 0;
  .btn_back_l, .btn_top_l {
    float: left; }
  /* otherwise link is slidetabs not clickable if inline with is open */
  /*	overflow: hidden; */ }

/** start mod panel ** */
.button_mod_panel {
  float: right;
  @include border-bottom-left-radius($corner_radius);
  border-width: 0 0 $border_width $border_width;
  border-color: $saito_gray_dark;
  border-style: solid;
  padding: 5px;
  margin: -10px -10px 10px 10px;
  height: 25px;
  width: 25px;
  .left {
    width: 25px;
    float: left; }
  .right {
    margin-left: 30px;
    padding: 0 1em;
    display: none; }
  ul {
    /* !important: in inline_view on entries_index the tree ul stuff messes in */
    margin: 0 !important;
    padding: 0 !important;
    list-style-type: none; } }
/* ... */

